// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "google/protobuf/duration.proto";
import "scalapb/scalapb.proto";

message TrafficControlParameters {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  // In bytes, the maximum amount of base traffic that can be accumulated
  uint64 max_base_traffic_amount = 1;

  // Maximum duration over which the base rate can be accumulated
  // Consequently, base_traffic_rate = max_base_traffic_amount / max_base_traffic_accumulation_duration
  google.protobuf.Duration max_base_traffic_accumulation_duration = 3;

  // Read scaling factor to compute the event cost. In parts per 10 000.
  uint32 read_vs_write_scaling_factor = 4;

  // Window size used to compute the max sequencing time of a submission request
  // This impacts how quickly a submission is expected to be accepted before a retry should be attempted by the caller
  // Default is 5 minutes
  google.protobuf.Duration set_balance_request_submission_window_size = 5;
}

message SetTrafficBalanceMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  // Member to update the balance for
  string member = 1;
  // Serial number - must be unique and monotonically increasing for each new balance update
  int64 serial = 2;
  // New total traffic balance
  uint64 total_traffic_balance = 4;
  // Domain Id
  string domain_id = 5;
}
